# PromptingTechniques

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: Dockerfile.dev  docker-compose-dev.yml  entrypoint.sh
data/: 1984.txt  cache.db  knowledge_graph
prompting_techniques/: 8_rag.py  __init__.py
